--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +10,44 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+.align {
+  display: inline-block;
+  text-align: center;
+} 
+
+.container {
+  background-color: lightblue;
+}
+.cards-container {
+  margin-right: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.card {
+  
+  justify-content: space-between;
+
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.player-names {
+  display: flex;
+  justify-content: space-between;
+  width: 35%;
+  color: black ;
+  margin-top: 10px;
+}
+
+.images{
+  display: flex;
+  justify-content: space-between;
 }
